                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.5


  *) [TS-2046] Move perl contribs to lib/perl, and have make / make install
   build and install the modules as appropriate.

  *) [TS-954] Better calculation of blocks in volume. Bumped cache DB version.

  *) [TS-2050] Cleanup ink_config.h.in, removing unused symbols.

  *) [TS-1487] [TS-2035] Moved plugin init, added plugin lifecycle hooks,
   added delay listen for cache. Removed TS_NO_API defined/build option. 

  *) [TS-2047] Schedule RamCacheCLFUSCompressor in RamCacheCLFUS::init instead
   of immediately after instantiation.

  *) [TS-2042] Remove remnants of unused vingid command line option.

  *) [TS-1898] improve cluster read/write performance.

  *) [TS-2036] Enable mgmt update (traffic_line -x) for plugins.

  *) [TS-2037] Fix start-stop-daemon typo in debian init script.

  *) [TS-2003] Fix RAM cache stats when using cluster. Author: Yunkai Zhang.

  *) [TS-1820] Cleanup UNUSED / INK_UNUSED / RELEASE_UNUSED. This also removes
   the entire mgmt/tools directory, and relevant support in traffic_shell for
   managing network interfaces.

  *) [TS-2033] Remove EncryptToFile() and mgmt API.

  *) [TS-2027] Initialize the ConnectionCount`s mutex.

  *) [TS-1997] Remove TSHttpTxnCachedUrlSet() API.

  *) [TS-2028] Config parse problems in healthchecks plugin.

  *) [TS-1966] Add new configuration option to control ProxyAllocator size.

  *) [TS-1151] cop may crash due to uninitialized pointer val

  *) [TS-2013] Install the tspush script.

  *) [TS-2012] Use standard C++11 containers in logstats.

  *) [TS-1999] Merge in the healthcheck plugin from GoDaddy.

  *) [TS-1998] Make stats-over-http support configurable URL path.

  *) [TS-1990] Fix core at CacheContinuation::handleDisposeEvent().

  *) [TS-2010] Build fixes for OS X 10.9 and Xcode 5.

  *) [TS-1957] fix If CacheContinuation timeout, timeout Event will be loop
